Commit: Flex-wrap footer fix

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -5,12 +5,14 @@
 footer {
   height: 100%;
   width: 100%;
-  flex-wrap: wrap;
   position: relative;
   bottom: 0;
   background-color: variables.$purpleColor;
   color: variables.$desaturatePurple;
   @extend %footer-padding;
+  .container {
+    flex-wrap: wrap;
+  }
   .address {
     h3 {
       font-size: 32px;
